fix: add window rule for thunar

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -148,6 +148,9 @@ device{
 # windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 # windowrulev2 = float,class:(ray),title:(ray)
 # windowrulev2 = float,class:(launcher),title:(launcher)
+windowrulev2 = float,class:(thunar)
+windowrulev2 = float,class:(FileRoller)
+windowrulev2 = size 40% 40%,class:(FileRoller)
 windowrulev2 = stayfocused,class:(Rofi)
 
 
